# guard-ranking-fragility

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  STATUS.md  pyproject.toml  report.md  requirements-starting-type-adaptation.txt  requirements.txt  start.sh  stop.sh
.github/: PULL_REQUEST_TEMPLATE.md
benchmark-explore/: README.md  build_content_samples.py  index.html
benchmark-explorer/: README.md  generate.py  index.public.html
configs/: data.yaml  eval.yaml  paper_a_sft.yaml  starting_type_adaptation_v1.yaml
docs/: README.md  _config.yml  architecture.md  benchmarks.md  bug-audit-2026-07-06.md  datasets.md  ensembles.md  index.md  mortgage-benchmark-build-runbook.md  mortgage-benchmark-build-spec.md  mortgage-benchmark-hard-results.md  paper-a-improvement-and-extension-recommendations.md  paper-a-minimal-refactor-plan.md  paper-a-specialization-frontier-plan.md  paper-b-compose-dont-tune-plan.md  paper-b-development-checkpoint-plan.md  paper-b-feasibility-investigation.md  paper-b-joint-compliance-stack-plan.md  paper-c-prereg.md  paper-data-preparation.md  paper-strategy.md  review-2026-07-12.md  roadmap.md  robots.txt  safepyramid.md  slm-architectures.md  slm-parity-plan.md  smollm3-guard-plan.md  starting-type-adaptation-prereg.md  taxonomy.md  two-model-optimization-plan.md  unified-report-plan.md  workflow.md
docs-site/: build-docs.mjs  docs-nav.js  docs.css  docs.js  index.html  llms.txt  m-architecture.html  m-architecture.md  m-benchmarks.html  m-benchmarks.md  m-datasets.html  m-ensembles.html  m-ensembles.md  m-fine-tuning.html  m-fine-tuning.md  m-roadmap.html  m-roadmap.md  m-safepyramid.html  m-slm-architectures.html  m-taxonomy.html  m-taxonomy.md  m-workflow.html  m-workflow.md
experiments/: README.md  aggregate_clean_sweep.py  analyze_composition.py  analyze_klsft.py  analyze_paper_a_sft.py  analyze_starting_type_adaptation.py  audit_paper_a_splits.py  build_hard_jsonl.mjs  build_mortgage_split.py  build_paper_reproduction_notebook.py  build_smollm3_notebook.py  bundle_notebook_data.py  diag_base_id_ood.py  emit_adaptation_tex.py  emit_ensembling_tex.py  emit_inhouse_auprc_poolings.py  ensemble_deployable.py  ensemble_probe.py  ensembling_analysis.py  ensembling_committee_bootstrap.py  ensembling_error_correlation.py  eval_base_ablation.py  eval_corrected.py  eval_expanded_heldout.py  eval_expguard_external.py  eval_guardrail_baselines.py  eval_large_guard.py  eval_llamaguard_logprob.py  eval_mortgage.py  eval_mortgage_hard.py  eval_mortgage_tuned.py  eval_novel_gaps.py  eval_paper_a_sft.py  eval_starting_type_adaptation.py  expguard_eval.py  guard_contracts.py  guard_eval_pipeline.py  hpo_guard.py  lock_paper_a_sft.py  paper_a_common.py  (+22 more)
guard_research/: __init__.py  metrics.py  prompts.py  provenance.py  thresholds.py
mortgage-benchmark/: .gitignore  Makefile  README.md  requirements.txt
notebooks/: README.md  agent_bouncer_studio.ipynb  paper_reproduction.ipynb  slm-parity.ipynb  smollm3_guard_end_to_end.ipynb  smollm3_guard_reproduction.ipynb
paper/: DRAFT.md  Makefile  README.md  _guardrail_landscape.tex  _guardrail_measured.tex  benchmark_chooses_the_winner.tex  metrics_survey.md  refs.bib
paper-a/: refs.bib  tab_primary_gen.tex
paper-a-simplified/: GLOSSARY.md  README.md  refs.bib  the-benchmark-chooses-the-winner-annotated.tex  the-benchmark-chooses-the-winner-simplified.html
paper-b/: Makefile  PLAN.md  compose_dont_tune.tex  refs.bib
paper-b-simplified/: GLOSSARY.md  README.md  compose-dont-tune-simplified.md
paper-html/: README.md  build.py  index.html  template.html
paper-mortgage/: mortgage_guardrail_benchmark.html  mortgage_guardrail_benchmark.md
paper-mortgage-simplified/: mortgage-benchmark-simplified.html  mortgage-benchmark-simplified.md
papers/: presentation-style-proposal-review.md  presentation-style-proposal.md
research/: README.md  requirements.txt
scripts/: benchmark_latency.py  build_dataset.py  build_smollm3_notebook.py  bundle_notebook_data.py  compute_curves.py  demo_train_eval.py  download_data.py  download_full_benchmarks.py  dump_predictions.py  eval_added_guard.py  eval_ensembles.py  make_report.py  prepare_beavertails_demo.py  rebuild_results_from_logs.py  render_benchmarks.py  run_benchmarks.py  run_eval.sh  run_incumbents.py  run_regimes.py  run_testing.py  run_training.py  smoke_train.py
tests/: test_analyze_starting_type.py  test_audit_fixes.py  test_baselines.py  test_benchmarks.py  test_cli.py  test_coverage_extra.py  test_curves.py  test_data.py  test_decoder.py  test_deploy.py  test_dump_predictions.py  test_encoder.py  test_ensemble.py  test_ensembles_eval.py  test_envfile.py  test_eval_starting_type.py  test_experiments.py  test_guard.py  test_guard_contracts.py  test_harness.py  test_leaderboard_report.py  test_loaders_io.py  test_logutil.py  test_manifests.py  test_metrics.py  test_model_store.py  test_model_wrappers.py  test_openai_guards.py  test_openai_predict.py  test_preflight_starting_type.py  test_progress.py  test_registry_hardware.py  test_registry_workflow.py  test_report.py  test_rewards.py  (+17 more)
(+313 files in other folders)
