[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-bouncer"
version = "0.0.1"
description = "A tiny, fast safety bouncer for LLMs and agents — screens prompts, tool calls, and outputs before they reach your model."
readme = "README.md"
# Python 3.10–3.13 (the full ML stack — torch/transformers/trl/peft — ships wheels here).
# 3.12 is the recommended/tested version (see .python-version); 3.14 is excluded because
# trl/peft wheels are not yet published for it.
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
keywords = ["llm", "agent", "guardrail", "safety", "prompt-injection", "moderation", "slm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = ["torch", "transformers", "datasets", "trl", "peft", "accelerate"]
mlx = ["mlx-lm"]
eval = ["torch", "transformers", "datasets", "openai>=1.40"]
mlflow = ["mlflow>=2.9"]
openai = ["openai>=1.40"]
serve = ["fastapi", "uvicorn"]
notebook = ["jupyter", "matplotlib"]
dev = ["pytest>=8.0", "pytest-cov", "ruff>=0.5"]

[project.scripts]
agent-bouncer = "agent_bouncer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_bouncer"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
